css/style.css
/* INIZIO REGOLE GENERALI */
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  background-color:black;
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  width:100%;
  height:100vh;
  color:rgb(101, 104, 113);
}

/* - PADDING GENERALI */
.centratura{
  padding-right:10px;
  padding-left: 10px;
}

/* STILE GENERALE TESTI */
h2{
  color:white;
  padding: 15px 0;
  font-size: 1.7em;
  font-weight: 700;
}

h3, .spotify-sections h3> a{
  color:white;
  padding: 15px 0;
  font-size: 1.1em;
  font-weight: 700;
}

h4{
  padding-bottom: 15px;
  font-size: .9em;
  font-weight: 600;
}

a {
  text-decoration: none;
  color:rgb(101, 104, 113);

}
p {
  padding-bottom: 15px;
  font-size: .9em;
  font-weight: 600;
}

/* ............................TOP BAR.............................  */
#top-bar{
  position: fixed;
  padding-right: 10px;
  top:0;
  right: 0;
  width: calc(100% - 180px);
  height:80px;
  z-index: 100;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: rgba(24, 24, 33,1);
  overflow-y: hidden;
}

#top-bar button{
  font-size: 10px;
  padding: 10px 35px;
  border:1px solid white;
  color:white;
  border-radius:20px;
  background-color: transparent;
}

/* ...............................SIDEBAR ................................. */
#side-bar {
  float: left;
  width: 180px;
  height:calc(100vh - 80px);
  z-index: 980;
  background-color: rgb(0, 0, 0);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: nowrap;
}

#side-bar .song-playing{
  align-self: flex-end;
}

#side-bar .playlist.scroll{
  overflow-y: hidden;
  height:calc(100vh / 3);
  }


#side-bar a {
  color:#75787c;
  font-size: .9em;
  font-weight: 500;
}

#side-bar ul.playlist >li:first-of-type a {
  font-size: 1.2em;
  font-weight: 500;
}

/* SIDEBAR ......................Sezione immagini ....................*/
img[alt~="logo-small"] {
  display:none;
}

#side-bar .main-logo{
  padding-top:20px;
  padding-bottom:30px;
}

#side-bar .main-logo img{
  height: 35px;
}

#side-bar .usersearch img , #side-bar .playlist img {
  width:25px;
  height: auto;
  vertical-align: middle;
}

#side-bar .song-playing .profile img {
  width:20px;
  background-color: #75787c;
  vertical-align: middle;
}

.radius{
  border-radius: 50%;
}

/* SIDEBAR ......................Stile lista .................... */
#side-bar ul{
  width:100%;
  padding:0;
}

#side-bar ul li{
  padding-bottom: 10px;
  list-style-type: none;
  width:100%
}

/* simbolo del + della sidebar */
#side-bar ul li i.fa-plus{
  width:30px;
  height:30px;
  color:black;
  font-size: 1.2em;
  padding: 7px 8px;
  margin-right: 8px;
  background-color: #75787c;
  vertical-align: middle;
}

#side-bar ul.song-playing li:last-of-type{
  border-top: 1px solid white;
  padding-top: 5px;
  width:160px;
}

#side-bar ul.song-playing li span{
  padding-left: 15px;
}

#side-bar .fa-arrow-alt-circle-down{
  font-size: 1.2em;
}

#side-bar ul.song-playing li:last-of-type span{
  color: white;
  font-size: 1.2em;
}

/* - SEZIONE CONTENUTO MAIN................INFOBAR.................... */

#main-section{
  width:calc(100% - 180px);
  float: left;
  overflow-y: scroll;
  height: calc(100vh - 80px);
  background-color:rgb(35, 39, 47);
}

#info-bar{
  padding-top: 80px;
  width:100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

#info-bar .menu{
  height: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#info-bar .menu>div.linea{
  display: none;
  width:30px;
  height: 2px;
  border-radius: 3px;
  background-color: rgb(173, 255, 47);
}

#info-bar .menu a{
  text-decoration: none;
  font-weight: bold;
}

#info-bar a {
  padding-right: 20px;
  padding-left: 20px;
  padding-bottom: 5px;
  font-size: .8em;
  font-weight: 400;
  color:#75787c;
}

/* SEZIONE CONTENUTO MAIN............................. PAGINA SPOTIFY */

#recently-played , #suggested-artist , #popular-artist {
  display: flex;
  justify-content:flex-start;
  flex-wrap: wrap;
  width:100%;
}

.spotify-sections .content {
  width: calc(100% / 6);
  text-align: center;
}

/* SEZIONE CONTENUTO MAIN.........................STILI IMMAGINI */
#popular-artist.spotify-sections .content .img-cover img{
  border-radius: 50%;
}

/*....SEZIONE IMMAGINI DELLA SEZIONE SPOTIFY..................... */
.img-cover.overlay {
  position: relative;
   width: 94%;
  max-width: 180px;
}

.spotify-sections .content .img-cover img{
  width: 100%;
  max-width: 180px;
  height: auto;
}

.project-overlay {
  font-size: 4.5em;
  line-height: 1em;
  position: absolute;
  top: 50%;
  left: 50%;
  background-color: rgb(0, 0, 0,0.4);
  opacity:0;
  color: #fff;
  padding: 35%;
  transition: 0.3s ease-in-out;
  transform: translate(-50% ,-50%);
}

/* .............BOTTOM BAR..................................... */
#bottom-bar{
  position: fixed;
  bottom:0;
  left:0;
  width:100%;
  height: 80px;
  z-index: 999;
  display: flex;
  flex-flow:row;
  justify-content: space-between;
  align-items:center;
  background-color: rgb(24, 24, 24);
}

/* .............BOTTOM BAR / SEZ NOW-PLAYING................ */
#bottom-bar .now-playing{
  padding-right: 0;
  max-width: 180px;
  height:50px;
  display:flex;
  justify-content: space-between;
  align-items:center;
}

#bottom-bar .now-playing>div:first-of-type{
  min-width: 35px;
}

#bottom-bar .now-playing img{
  width:30px;
  height:auto;
  vertical-align: middle;
}

#bottom-bar .now-playing h3{
  padding-bottom: 0;
  margin-bottom: 0;
}

#bottom-bar .now-playing h3 a{
  font-size: 0.85em;
  color: white;
}

#bottom-bar .now-playing button{
  color: #75787c;
  padding:2px 6px;
}

/* ..........BOTTOM BAR /  MUSIC-PLAYER.......................... */
#bottom-bar .music-player{
  width: 30%;
  min-width:100px;
  display: flex;
  flex-flow:column;
  justify-content:center;
  align-items:center;
}

#bottom-bar .music-player button {
  color: white;
  padding-right: 4px;
}
#bottom-bar .music-player button:last-of-type{
  padding-right: 0;
}

#bottom-bar .music-player .buttons{
  height:30px;
}

#bottom-bar .music-player button{
  color:white;
  font-size: .8em;
  vertical-align: middle;
  transition: all 0.1s ease-out;
}
#bottom-bar .music-player button i.fa-play-circle{
  font-size: 1.8em;
  padding: 0 6px;
  vertical-align: middle;
  transition: all 0.1s ease-out;
}

#bottom-bar .music-player .playbar a{
  color:white;
  font-size: .7em;
  vertical-align: middle;
}

/* ...........BOTTOM BAR /  AUDIO-SETTINGS.............................. */
#bottom-bar .audio-settings{
  padding-left: 10px;
  width:180px;
  min-width: 90px;
  display:flex;
  justify-content: space-between;
}

#bottom-bar .audio-settings button {
  color:white;
  font-size: 0.75em;
  vertical-align: middle;
  padding-right: 8px;
}

/* .............BOTTOM BAR regole generali............................... */
#bottom-bar button {
  background-color: transparent;
  border: 0;
}

/* .............BOTTOM BAR regole generali DELLA PLAYBAR.................... */
#bottom-bar .playbar{
  width:100%;
  display: flex;
  flex-flow:row;
  justify-content:center;
  align-items:center;
}

#bottom-bar .playbar .playbar-bg{
  position:relative;
  top:0;
  left:0;
  width:100%;
  height:4px;
  border-radius: 3px;
  background-color: #5a5a5a;
  margin: 0 5px;
}

#bottom-bar .playbar .playbar-bg .playbar-line{
  position: absolute;
  left:0px;
  width:70%;
  height:4px;
  border-radius: 3px;
  background-color: #c1c1c1;
}

#bottom-bar .music-player .fa-circle{
  position: absolute;
  display: none;
  font-size: 12px;
  color: #c1c1c1;
  right:30%;
  line-height: 4px;
}

#bottom-bar .audio-settings .fa-circle{
  position: absolute;
  display: none;
  font-size: 10px;
  color: #c1c1c1;
  right:30%;
  line-height: 3px;
}

/* .............SEZIONE GENERALE HOVER .............................. */
.img-cover.overlay:hover .project-overlay{
  opacity:1
}

#side-bar ul li:hover a , #info-bar li:hover a, #bottom-bar .now-playing button:hover {
  color: white;
}
#side-bar ul li:hover i.fa-plus{
  background-color: white;
}

#bottom-bar .music-player .playbar:hover .fa-circle,
#bottom-bar .audio-settings .playbar:hover .fa-circle{
  display: block;
}
#bottom-bar .music-player .playbar:hover .playbar-bg .playbar-line{
  background-color: rgb(173, 255, 47);
}

#bottom-bar .music-player .buttons button:hover {
  transform: scale(1.4);
}

#bottom-bar .music-player button:hover i.fa-play-circle{
  transform: scale(.9);
}

#info-bar .menu>div.linea:target{
  display: block;
}

#top-bar button:hover{
  transform: scale(1.05);
}

#side-bar .song-playing .profile:hover img {
  background-color: black;
  filter: invert(100%);
}

/* ......................MEDIA QUERIES................................... */

@media all  and (max-width:340px){

  .spotify-sections .content {
    width: 80%!important;
    text-align: center;
  }

  .img-cover.overlay {
    position: relative;
    width: 94%;
    max-width: 200px!important;
  }

  .spotify-sections .content .img-cover img{
    width: 100%;
    max-width: 200px;
    height: auto;
  }
}
/* .............MEDIA QUERY XS................................... */
@media all and (max-width:575px) {

  #top-bar{
    width:calc(100% - 45px);
    right:0;
  }

  #main-section{
    width:calc(100% - 45px)!important;
  }

/* nuove dimensioni della SideBar */
  #side-bar{
    width:45px!important;
    padding-top:5px;
  }

  #side-bar .main-logo{
    padding-top:20px;
    padding-bottom:10px;
  }

  #side-bar .fa-arrow-alt-circle-down{
    font-size: 1.2em;
    padding-left: 4px;
  }

  #side-bar ul.song-playing li:last-of-type{
    border-top: 0;
  }

 /* elementi della sidebar che devono essere nascosti */
  .collapse{
    display:none;
  }

  img[alt~="main-logo"] {
    display:none;
  }

  img[alt~="logo-small"] {
    display:block;
    width:25px;
  }
}

/* .......MEDIA QUERY SM.................................................... */
@media all  and (max-width:767px){

  .spotify-sections .content {
    width: calc(100% / 2);
    text-align: center;
  }

  .img-cover.overlay {
    position: relative;
    width: 94%;
    max-width: 400px;
  }

  .spotify-sections .content .img-cover img{
    width: 100%;
    max-width: 400px;
    height: auto;
  }

}

/* ......................MEDIA QUERY MD .................................*/
@media all and (min-width:768px) and (max-width:992px){

  .spotify-sections .content {
    width: calc(100% / 4);
    text-align: center;
  }
}

/* ......................MEDIA QUERY ALTEZZE....................................*/
@media all and (max-height:570px) {


/* rendi visibile scrollbar della SIDEBAR per H inferiori a 576PX */
  #side-bar .playlist.scroll{
    overflow-y: scroll;
    height:calc(100vh / 3);
  }
}

/* ......................MEDIA QUERY ALTEZZE....................................*/
@media all and (max-height:80px) {
  #top-bar{
    z-index: 1000;
    background-color: rgba(24, 24, 33,.4);
  }
}

